# scpi-instrument-toolkit

./: .gitignore  LICENSE  README.md  mock_instruments.py  pyproject.toml  repl.py  requirements.txt  setup.ps1  setup_env.py
.github/workflows/: publish.yml
lab_instruments/: __init__.py  pyproject.toml  repl.py
lab_instruments/src/: bk_4063.py  device_manager.py  discovery.py  hp_34401a.py  hp_e3631a.py  jds6600_generator.py  keysight_edu33212a.py  matrix_mps6010h.py  owon_xdm1041.py  rigol_dho804.py  tektronix_mso2024.py  terminal.py
tests/: test_awg.py  test_discovery.py  test_dmm.py  test_keysight_edu33212a.py  test_oscope.py  test_oscope_old.py
