[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scpi-instrument-toolkit"
version = "0.1.0"
description = "Python drivers and interactive REPL for SCPI test and measurement instruments"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Brighton Sikarskie"},
    {name = "Cesar Magana"},
]
keywords = ["scpi", "visa", "instrument", "oscilloscope", "power-supply", "multimeter", "function-generator", "lab", "test-equipment"]
dependencies = [
    "PyVISA>=1.14.0",
]

[project.optional-dependencies]
sim = ["pyvisa-py"]

[project.scripts]
scpi-repl = "lab_instruments.repl:main"

[project.urls]
Homepage = "https://github.com/bsikar/scpi-instrument-toolkit"
Repository = "https://github.com/bsikar/scpi-instrument-toolkit"
Issues = "https://github.com/bsikar/scpi-instrument-toolkit/issues"

[tool.setuptools.packages.find]
include = ["lab_instruments*"]
