[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lab_instruments"
version = "0.1.0"
description = "Reusable SCPI instrument drivers for test and measurement equipment"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Brighton Sikarskie"},
    {name = "Cesar Magana"}
]
keywords = ["instrument", "visa", "scpi", "oscilloscope", "power-supply", "multimeter", "function-generator"]
dependencies = [
    "PyVISA>=1.14.0",
]

[project.urls]
Homepage = "https://github.com/bsikar/scpi-instrument-toolkit"
Repository = "https://github.com/bsikar/scpi-instrument-toolkit"
Issues = "https://github.com/bsikar/scpi-instrument-toolkit/issues"

[project.optional-dependencies]
sim = ["pyvisa-py"]

[tool.setuptools.packages.find]
where = ["src"]